--- a/templates/entry.html
+++ b/templates/entry.html
@@ -12,6 +12,14 @@
 			<td>Ticker:</td>
 			<td><input name='ticker' type='TEXT' width='60', value='GOOG'></td>
 		</tr>
+		<tr>
+			<td>Start date (YYYY-MM-DD):</td>
+			<td><input name='startdate' type='TEXT' width='60', value='2019-12-21'></td>
+		</tr>
+		<tr>
+			<td>End date (YYYY-MM-DD):</td>
+			<td><input name='enddate' type='TEXT' width='60', value='2021-03-19'></td>
+		</tr>
 	</table>
 	<p>When you're ready, click this button:</p>
 	<p><input value='Do it!' type='SUBMIT'></p>
